<resources>
    <string name="xiaomi_update_dialog_title">Update available</string>
    <string name="xiaomi_update_dialog_message">"Introducing version %1$s
Size: %2$s"</string>
    <string name="xiaomi_update_dialog_message_diff">"Introducing version %1$s
Delta update size: %2$s"</string>
    <string name="xiaomi_external_storage_unavailable">Storage not available, check your SD card.</string>
    <string name="xiaomi_bytes_unit">%1$sB</string>
    <string name="xiaomi_kilobytes_unit">%1$sKB</string>
    <string name="xiaomi_megabytes_unit">%1$sMB</string>
    <string name="xiaomi_connect_download_manager_fail">"Couldn't connect to Download Manager, check Download Manager status in the App Manager."</string>
    <string name="st_antispam_mode_smart_state">11111111</string>
    <string name="st_antispam_mode_blacklist_state">11112121</string>
    <string name="st_antispam_mode_only_contacts_state">11110000</string>
    <string name="st_antispam_mode_only_whitelist_state">11000000</string>
    <string name="st_antispam_mode_only_all_deny_state">10000000</string>
    <string name="app_name">Backup</string>
    <string name="local_app_name">Backup</string>
    <string name="local_home_title">Back up locally</string>
    <string name="button_backup">Back up</string>
    <string name="start_backup">Back up</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_send">Send</string>
    <string name="backup_empty">No backups.</string>
    <string name="backup_items_sysdata_tailer">" system data files,"</string>
    <string name="backup_items_app_tailer">" app data files"</string>
    <string name="backup_failed">"Couldn't back up"</string>
    <string name="sdcard_unmounted">Insert SD card now</string>
    <string name="backup_progress">Backing up…</string>
    <string name="button_ok">OK</string>
    <string name="button_continue">Continue</string>
    <string name="backup_finished">Backed up successfully</string>
    <string name="backup_report">View details</string>
    <string name="backup_hint">Keep your device powered on</string>
    <string name="backup_hint_onpad">Keep your device powered on</string>
    <string name="delete_backup_title">Delete backup</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_backup_process">Deleting…</string>
    <string name="backup_error">"Couldn't back up"</string>
    <string name="delete_failed_backup_confirm">This backup contains errors.</string>
    <string name="batch_delete_backup_confirm">Delete selected backups?</string>
    <string name="start_restore">Restore</string>
    <string name="backup_file_error">"Couldn't back up"</string>
    <string name="unit_byte">B</string>
    <string name="unit_piece">" items"</string>
    <string name="restore_finished">Restored successfully</string>
    <string name="restore_report">Restore details</string>
    <string name="restore_progress">Restoring…</string>
    <string name="restore_contacts_hit">You may need to sign in again to view restored data.</string>
    <string name="restore_telephony_hit">Restoring will restart the Phone app.</string>
    <string name="restore_launcher_layout_hit">Restore launcher settings</string>
    <string name="settings_summary">Phone and messaging settings</string>
    <string name="camera_summary">Camera settings (not including photos)</string>
    <string name="account_summary">Backup Google Account, Mi Account, and other user data</string>
    <string name="cloud_app_name">Mi Cloud backup</string>
    <string name="cloud_home_title">Mi Cloud</string>
    <string name="prompt_reading">Reading…</string>
    <string name="prompt_sending">Uploading…</string>
    <string name="prompt_writing">Saving…</string>
    <string name="backup_new">New:</string>
    <string name="backup_update">Update</string>
    <string name="backup_delete">Delete:</string>
    <string name="findlost_contact">Restore contacts</string>
    <string name="findlost_contact_online">Restore contacts from Mi Cloud</string>
    <string name="cloud_backup_login">Sign in to your Mi Account</string>
    <string name="cloud_backup_hint">To access your backups, sign in now</string>
    <string name="cloud_backup_window_title">Mi Cloud backup</string>
    <string name="cloud_restore_window_title">Mi Cloud restore</string>
    <string name="cloud_restore_title">Restore backup data</string>
    <string name="local_backup_window_title">Local backup data</string>
    <string name="local_restore_window_title">Local restore</string>
    <string name="account_login">Sign in</string>
    <string name="miliao_account_login">Sign in with Mi Talk</string>
    <string name="miliao_account_guide">Use your Mi Account to sign in to Mi Cloud, MIUI Theme Store, and other Mi services, from anywhere.</string>
    <string name="auto_backup">Schedule routine back up</string>
    <string name="contact_title">Contacts</string>
    <string name="call_title">Call history</string>
    <string name="sms_title">Messaging</string>
    <string name="mms_title">Multimedia messaging</string>
    <string name="wifi_title">WLAN settings</string>
    <string name="note_title">Notes</string>
    <string name="compute_backup_info">Getting backup info…</string>
    <string name="compute_delete_contact_info">Getting info…</string>
    <string name="unknown_hint">Unknown</string>
    <string name="task_progress">Progress</string>
    <string name="task_pending">Waiting…</string>
    <string name="task_pre_running">Starting…</string>
    <string name="task_post_running">Backing up…</string>
    <string name="task_finished">"Backed up successfully "</string>
    <string name="task_canceled">Backup canceled</string>
    <string name="task_failed">"Couldn't back up"</string>
    <string name="task_canceled_local">Backup incomplete (%s)</string>
    <string name="task_canceled_all_local">Canceled</string>
    <string name="task_failed_local">Backup incomplete (%s)</string>
    <string name="task_failed_all_local">"Couldn't back up"</string>
    <string name="task_backup_finished_local">"Backed up "</string>
    <string name="task_restore_finished_local">"Restored "</string>
    <string name="task_restore_none">Nothing to restore</string>
    <string name="task_stopped_exception">Restore canceled</string>
    <string name="sdcard_no_enough_space">Not enough space</string>
    <string name="sdcard_no_enough_space_message">"There's not enough storage space on your SD card."</string>
    <string name="data_no_enough_space_message">"There's not enough space on your device's internal memory."</string>
    <string name="task_running_hint">This process is already running in the background</string>
    <string name="task_running_dialog">Backup and restore are in progress. Touch OK to view.</string>
    <string name="task_running_backup_hint">This task is already running in the background</string>
    <string name="task_running_restore_hint">This task is already running in the background</string>
    <string name="task_running_backup_dialog">Backup is in progress. Touch OK to view.</string>
    <string name="task_running_restore_dialog">Restore is in progress. Touch OK to view.</string>
    <string name="task_service_not_launched">"Task hasn't started yet"</string>
    <string name="task_local_backup_cancel_dialog">"Backup isn't finished. Stop anyway?"</string>
    <string name="task_cloud_backup_cancel_dialog">"Backup isn't finished. Stop anyway?"</string>
    <string name="task_restore_cancel_dialog">Stopping now may result in data loss.</string>
    <string name="task_backup_cancel_progress">Stopping…</string>
    <string name="task_restore_cancel_progress">Stopping…</string>
    <string name="nothing_searched">No results.</string>
    <string name="restore_counts">Restore:</string>
    <string name="service_stoped">Service stopped</string>
    <string name="sc_network_unavailable">Check your connection and try again.</string>
    <string name="sc_bad_request">Invalid request</string>
    <string name="sc_unaccess_password_file">"Can't find WLAN network password"</string>
    <string name="sc_service_unavailable">Mi Cloud unavailable</string>
    <string name="sc_unauthorized">Sign in again</string>
    <string name="sc_request_timeout">Request timed out</string>
    <string name="sc_precondition_failed">You need to add an email address to your Mi Account first.</string>
    <string name="sc_internal_server_error">Internal server error</string>
    <string name="sc_others">An error occurred</string>
    <string name="succeed">Complete</string>
    <string name="fail">Failed</string>
    <string name="button_return">Back</string>
    <string name="button_next">Next</string>
    <string name="button_finish">Finish</string>
    <string name="progress_backup_hint">Backing up…</string>
    <string name="cancel_backup">Stop</string>
    <string name="restore_contact">Restore contacts</string>
    <string name="restore_contact_content">Restoring may create duplicate contacts.</string>
    <string name="progress_restore_hint">Restoring…</string>
    <string name="cancel_restore">Stop</string>
    <string name="restore_failed">"Couldn't restore"</string>
    <string name="local_select_sysdata">System</string>
    <string name="local_select_userapp">Apps</string>
    <string name="local_select_account_contact">Accounts &amp; contacts</string>
    <string name="local_select_files">SD card</string>
    <string name="local_select_image">Images</string>
    <string name="local_select_audio">Audio files</string>
    <string name="local_select_video">Videos</string>
    <string name="local_select_doc">Documents</string>
    <string name="data_item_desc">Data</string>
    <string name="apps_and_data_item_desc">Apps and data</string>
    <string name="local_no_backup">No backups.</string>
    <string name="auto_backup_setting">Schedule routine back up</string>
    <string name="auto_backup_open">Back up automatically</string>
    <string name="auto_backup_only_wifi">Only when connected to WLAN</string>
    <string name="auto_backup_date">Days</string>
    <string name="auto_backup_time">Time</string>
    <string name="auto_backup_choose_title">Choose items to back up</string>
    <string name="auto_backup_choose">Back up items</string>
    <string name="auto_backup_all_user_apps">All apps</string>
    <string name="auto_backup_selected_user_apps">Selected apps</string>
    <string name="auto_backup_select_user_apps">Choose apps</string>
    <string name="auto_backup_system_data">System</string>
    <string name="auto_backup_user_data">Apps</string>
    <string name="system_backup_info">System settings and Home screen layout</string>
    <string name="digit_percent">%</string>
    <string name="trans_one_key_migrate">Mi Mover</string>
    <string name="trans_connecting_toast">Connecting…</string>
    <string name="trans_scan_qr_code_tips">Scan QR code on the new device</string>
    <string name="trans_show_qr_code_tips">Scan QR code using old device</string>
    <string name="trans_operate_new_phone_tips">"Go to Settings > Additional Settings > Mi Mover
Tap [I'm a recipient] to create a QR code"</string>
    <string name="trans_operate_func_one">Method A</string>
    <string name="trans_operate_func_two">Method B</string>
    <string name="trans_operate_old_phone_tips1">"1. Install Mi Mover app on your old device
2. Open the app and tap Start
3. Scan the QR code with your old device"</string>
    <string name="trans_operate_old_phone_tips2">"Go to Settings > Additional Settings > Mi Mover, Tap [I'm a sender]"</string>
    <string name="trans_wait_trans_data">"Connected to the old device.
Waiting for the transfer…"</string>
    <string name="trans_select_data">Select items to send</string>
    <string name="trans_select_data_tips">"Select items to transfer
Similar files on the new device will be overwritten"</string>
</resources>