<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/auto_backup_system_data" />
    <miui.preference.ValuePreference android:persistent="false" android:title="@string/local_select_sysdata" android:key="auto_backup_sysdata" android:summary="@string/system_backup_info" />
    <PreferenceCategory android:title="@string/auto_backup_user_data" />
    <miui.preference.RadioButtonPreference android:persistent="false" android:title="@string/auto_backup_all_user_apps" android:key="auto_backup_all_userapp" android:defaultValue="false" />
    <miui.preference.RadioButtonPreference android:persistent="false" android:title="@string/auto_backup_selected_user_apps" android:key="auto_backup_selected_userapp" />
    <PreferenceCategory />
    <miui.preference.ValuePreference android:persistent="false" android:title="@string/auto_backup_select_user_apps" android:key="auto_backup_userapp" />
</PreferenceScreen>