<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:id="@id/lyt_qrcode_view" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/trans_show_qrcode_img_margin">
        <ImageView android:layout_gravity="center_horizontal" android:id="@id/img_qrcode" android:background="@drawable/qrcode_border_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <miui.widget.ProgressBar android:layout_gravity="center_horizontal" android:id="@id/view_progress_bar" android:padding="100.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" style="?android:attr/progressBarStyle" />
    </FrameLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/lyt_operation_tips" android:background="@android:color/white" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginStart="23.0dip" android:layout_marginEnd="23.0dip">
        <TextView android:textSize="14.0sp" android:textColor="#99000000" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="14.0dip" android:text="@string/trans_show_qr_code_tips" />
        <ImageView android:background="#66000000" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginTop="@dimen/trans_show_qrcode_img_margin" />
        <ScrollView android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
            <LinearLayout android:orientation="vertical" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="14.0sp" android:textColor="#66000000" android:layout_gravity="start" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/trans_show_qrcode_text_margin" android:text="@string/trans_operate_func_one" />
                <TextView android:textSize="14.0sp" android:layout_gravity="start" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/trans_operate_old_phone_tips1" />
                <TextView android:textSize="14.0sp" android:textColor="#66000000" android:layout_gravity="start" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/trans_show_qrcode_text_margin" android:text="@string/trans_operate_func_two" />
                <TextView android:textSize="14.0sp" android:layout_gravity="start" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/trans_operate_old_phone_tips2" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>