<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="65.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/progress_bg" android:background="@color/progress_status_bg" android:paddingTop="@dimen/progress_number_top_margin" android:layout_width="fill_parent" android:layout_height="240.0dip" android:paddingStart="@dimen/progress_number_left_margin">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.miui.backup.NumberProgressView android:textSize="@dimen/progress_number_size" android:textColor="@color/number_progress_color" android:layout_gravity="center_horizontal" android:id="@id/progress_info" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:textSize="23.0sp" android:textColor="@color/number_progress_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="11.0dip" android:text="@string/digit_percent" />
        </LinearLayout>
        <TextView android:textSize="@dimen/progress_title_size" android:textColor="@color/number_progress_color" android:layout_gravity="start" android:id="@id/progress_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/progress_title_top_margin" android:singleLine="true" android:layout_marginStart="@dimen/progress_title_left_margin" style="@miui:style/TextAppearance.WindowTitle.Large" />
        <TextView android:textSize="@dimen/progress_summary_size" android:textColor="@color/summary_progress_color" android:layout_gravity="start" android:id="@id/progress_summary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/progress_summary_top_margin" android:text="@string/backup_hint" android:singleLine="true" android:layout_marginStart="@dimen/progress_title_left_margin" style="@miui:style/TextAppearance.WindowTitle.Large.Subtitle" />
    </LinearLayout>
    <ImageView android:background="@color/progress_divider_bg" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginTop="@dimen/progress_divider_top_margin" android:layout_marginStart="@dimen/progress_divider_margin_horizontal" android:layout_marginEnd="@dimen/progress_divider_margin_horizontal" />
    <ListView android:id="@id/progress_list" android:layout_width="fill_parent" android:layout_height="0.0dip" android:cacheColorHint="@null" android:divider="@null" android:layout_weight="1.0" android:layout_marginStart="@dimen/progress_list_margin_horizontal" android:layout_marginEnd="@dimen/progress_list_margin_horizontal" />
    <ImageView android:background="#ffe5e5e5" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginStart="@dimen/progress_divider_margin_horizontal" android:layout_marginEnd="@dimen/progress_divider_margin_horizontal" />
    <LinearLayout android:orientation="vertical" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/bottom_button_margin_vertical" android:layout_marginBottom="@dimen/bottom_button_margin_horizontal" android:layout_marginStart="@dimen/bottom_button_margin_horizontal" android:layout_marginEnd="@dimen/bottom_button_margin_horizontal">
        <Button android:textAppearance="@miui:style/TextAppearance.Widget.Button" android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/button_cancel" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/button_cancel" />
        <Button android:textAppearance="@miui:style/TextAppearance.Widget.Button" android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/button_finish" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/button_finish" />
    </LinearLayout>
</LinearLayout>