<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/lyt_select_data_title" android:background="#ff4cbfa0" android:layout_width="fill_parent" android:layout_height="267.0dip">
        <TextView android:textAppearance="@miui:style/TextAppearance.WindowTitle" android:textColor="@android:color/white" android:gravity="center_vertical" android:layout_gravity="start" android:id="@id/txt_select_data_back" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/trans_select_data" android:drawableStart="@miui:drawable/action_bar_back_dark" android:layout_marginStart="3.0dip" />
        <LinearLayout android:layout_gravity="center" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/trans_select_number_text_size" android:textColor="@android:color/white" android:id="@id/ftv_select_data_number" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:textSize="@dimen/trans_select_unit_text_size" android:textStyle="bold" android:textColor="@android:color/white" android:gravity="top" android:id="@id/txt_select_data_unit" android:paddingTop="@dimen/trans_select_unit_padding_top" android:layout_width="wrap_content" android:layout_height="fill_parent" />
        </LinearLayout>
        <TextView android:textAppearance="?android:textAppearanceLarge" android:textSize="14.0sp" android:textColor="#ccffffff" android:gravity="center" android:id="@id/txt_select_data_tips" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/trans_select_data_tips" />
    </LinearLayout>
    <ListView android:id="@id/lst_select_list" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
    <ImageView android:background="#ffe5e5e5" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginStart="@dimen/progress_divider_margin_horizontal" android:layout_marginEnd="@dimen/progress_divider_margin_horizontal" />
    <Button android:id="@id/data_action" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/bottom_button_margin_vertical" android:layout_marginBottom="@dimen/trans_bottom_button_padding_bottom" android:text="@string/button_send" android:layout_marginStart="@dimen/trans_bottom_content_padding_horizontal" android:layout_marginEnd="@dimen/trans_bottom_content_padding_horizontal" />
    <Button android:id="@id/btn_cancel" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/trans_bottom_content_padding_horizontal" android:layout_marginTop="@dimen/bottom_button_margin_vertical" android:layout_marginRight="@dimen/trans_bottom_content_padding_horizontal" android:layout_marginBottom="@dimen/trans_bottom_button_padding_bottom" android:text="@android:string/cancel" />
</LinearLayout>